# jdsat-gpos-msim

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  export_catalog.py  models.py  routes.py  server.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  exporter.py  (+6 more)
docs/: README.md  analyst_workflow_diagram.md  analyst_workflow_diagram.mmd  app_brief.md  backlog.md  career_network_structure.md  career_network_structure.mmd  current_state_vs_target_state.md  development_dependencies.md  first_slice.md  force_analytics_flow.md  force_analytics_flow.mmd  force_wide_scenario_shape.md  implementation_m1.md  manpower_extraction_plan.md  provenance.md  readiness_linkage_diagram.md  readiness_linkage_diagram.mmd  roadmap.md  session_handoff.md  simulation_policy_data_separation.md  simulation_policy_data_separation.mmd  state_of_model_brief.html  state_of_model_brief.md  validation_plan.md  visuals.md
scenarios/: baseline_accession_override.json  baseline_accession_table.json  baseline_boosted.json  baseline_policy_override.json  baseline_rate_table.json  baseline_small.json  baseline_year_phased_override.json  unordered_phased.json  unordered_sequential.json
scripts/: bootstrap_dev.ps1  install_gameplan_editable.ps1  render_diagrams.ps1  validate_repo.ps1  verify_gameplan_dependency.ps1
tests/: conftest.py  test_api.py  test_graph_builder.py  test_models.py  test_persistence_exporter.py  test_policy.py  test_projection.py  test_scenario_loader.py  test_summary.py
(+40 files in other folders)
